--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -100,7 +100,7 @@ description: ""
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">点子二: 我是小小导游 </h4>
   <p style="font-size:25px;font-family:KaiTi">
-让孩子根据所看到的新加坡景点，为家人设计“游玩计划”。你可以折纸船 <a href="" target="_blank;">  （http://tinyurl.com/paperboat2022）</a>或利用再循环材料（如纸盒、纸筒、塑料瓶子等）和孩子一起设计并制作交通工具。之后，你的孩子可结合点子一的“新加坡景点贴画”以及制作好的交通工具，和家人分享他的“游玩计划”。
+你可以利用再循环材料与孩子一起制作交通工具（如：折纸船 <a href="http://tinyurl.com/paperboat2022" target="_blank;"> http://tinyurl.com/paperboat2022</a>，然后结合点子一的新加坡景点贴画，让孩子为家人设计一日游，并请孩子说一说。
 </p>
 </td>
   </table><br />
