--- a/pages/小学.md
+++ b/pages/小学.md
@@ -106,6 +106,10 @@ width:100%;
     font-weight: 700;">  2.   
     注重实用价值，实现乐学善用 </td>
   </tr>
+				</table>
+<br/>
+<img src="/images/CL Pri v2 1.png">
+<br/>
   <tr>
      <td style="text-align: left;font-family:KaiTi;">    
      <li style="text-align: left;font-family:KaiTi;font-size:25px;">充分利用家庭、学校、社区等不同平台，为学生营造有利于学习华文的环境。</li></td>
