--- a/pages/小学.md
+++ b/pages/小学.md
@@ -140,14 +140,13 @@ width:100%;
 <img src="/images/Picture-Pri-2.png">
 <br/>
 <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/jQjU07ccL8I" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段母语辅助计划  ABLE华文我也行 课堂活动 </span>
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段高级华文 学生学习成果 </span>
    <br />
- <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/9tkyqj-BWMw" title="生活看板（华文） —— 阳光小熊早餐" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /> <span style="color:#d14165;font-size:18px;font-family:KaiTi">高年段华文
-《生活看板》实践学习</span>
+ <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/9tkyqj-BWMw" title="生活看板（华文） —— 阳光小熊早餐" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /> <span style="color:#d14165;font-size:18px;font-family:KaiTi">高年段华文 生活看板 时间学习 </span>
     <br />
 <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/P9bzbHFMX3M" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段高级华文 
-学生学习成果</span>
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段母语辅助计划 ABLE华文我也行 
+课堂活动 </span>
    <br />
       <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
   <tr>
