--- a/pages/小学.md
+++ b/pages/小学.md
@@ -119,11 +119,9 @@ width:100%;
     <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;
     font-weight: 700;">3. 遵循学习规律，符合认知发展 </td>
  </tr>
-<tr>
-</table>
   <tr>
-     <td style="text-align: left;font-family:KaiTi;font-size:25px;">     
-      <li style="text-align: left;font-family:KaiTi;line-height: 1px;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td></tr>
+     <td style="text-align: left;font-family:KaiTi;font-size:25px;">   
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td>
 </table>
 <br/>
 <img src="/images/Picture-Pri-1.png">
