--- a/pages/小学.md
+++ b/pages/小学.md
@@ -123,7 +123,6 @@ width:100%;
      <td style="text-align: left;font-family:KaiTi;font-size:25px;">   
      <li style="text-align: left;font-family:KaiTi;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td>
 </table>
-
  <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
   <tr>
     <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
@@ -215,7 +214,7 @@ width:100%;
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">数码资源介绍（SLS）
 </span>
      </center>
-<br />
+	<h4 style="font-family:KaiTi;font-size:35px;color:#d14165" >课程资源</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_3.jpg"><br/>
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">听说剧场</h4>
 <li style="text-align: left;font-family:KaiTi;font-size:25px;">动画放映室／录像放映室</li>
