--- a/pages/小学.md
+++ b/pages/小学.md
@@ -221,7 +221,7 @@ width:100%;
 <p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/PB0IwcNKCBA" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
-     <span style="color:#d14165;font-size:18px;font-family:KaiTi">2B19动画视频
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">动画放映室-小雨点奇遇记
 </span>
      </center>
 <br />
