--- a/pages/小学.md
+++ b/pages/小学.md
@@ -106,23 +106,27 @@ width:100%;
     font-weight: 700;">  2.   
     注重实用价值，实现乐学善用 </td>
   </tr>
-				</table>
+</table>
 <br/>
 <img src="/images/CL Pri v2 1.png">
 <br/>
   <tr>
-     <td style="text-align: left;font-family:KaiTi;">    
+     <td style="text-align: left;font-family:KaiTi;">   
      <li style="text-align: left;font-family:KaiTi;font-size:25px;">充分利用家庭、学校、社区等不同平台，为学生营造有利于学习华文的环境。</li></td>
   </tr>
- <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
+ <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
   <tr>
-    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
     font-weight: 700;">3. 遵循学习规律，符合认知发展 </td>
  </tr>
   <tr>
      <td style="text-align: left;font-family:KaiTi;font-size:25px;">   
      <li style="text-align: left;font-family:KaiTi;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td>
 </table>
+	</table>
+<br/>
+<img src="/images/Picture-Pri-1.png">
+<br/>
  <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
   <tr>
     <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
@@ -214,14 +218,14 @@ width:100%;
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">数码资源介绍（SLS）
 </span>
      </center>
-	<h4 style="font-family:KaiTi;font-size:35px;color:#d14165" >课程资源</h4>
+<br />
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_3.jpg"><br/>
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">听说剧场</h4>
 <li style="text-align: left;font-family:KaiTi;font-size:25px;">动画放映室／录像放映室</li>
 <p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/PB0IwcNKCBA" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
-     <span style="color:#d14165;font-size:18px;font-family:KaiTi">动画放映室-小雨点奇遇记
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">2B19动画视频
 </span>
      </center>
 <br />
