--- a/pages/小学.md
+++ b/pages/小学.md
@@ -122,8 +122,9 @@ width:100%;
   <tr>
      <td style="text-align: left;font-family:KaiTi;font-size:25px;">   
      <li style="text-align: left;font-family:KaiTi;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td>
-		 </tr>
-	 <br/>
+  </tr>
+</table>
+<br/>
 <img src="/images/Picture-Pri-1.png">
 <br/>
  <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
