--- a/pages/高中.md
+++ b/pages/高中.md
@@ -144,7 +144,7 @@ width:80%;
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_2.jpg" />
     <br />
      <center>
-   <iframe width="560" height="315" src="https://www.youtube.com/embed/r1_FRRzx0Tg" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:21px;font-family:KaiTi">华文主修的未来展望
+   <iframe width="560" height="315" src="https://www.youtube.com/embed/r1_FRRzx0Tg" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:22px;font-family:KaiTi">华文主修的未来展望
 </span></center>
 <h4 id="C2" style="font-size:35px;font-family:KaiTi;color:#d14165;">H1华文与华文B
 </h4>
@@ -157,11 +157,11 @@ width:80%;
   <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学
 </h4>
 <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H2-CLL.jpg" />
-<p><a href="/files/2020-h2h3cll-syllabus.pdf" target="_blank"> <span style="font-size:21px;font-family:KaiTi;">H2华文与文学课程标准
+<p><a href="/files/2020-h2h3cll-syllabus.pdf" target="_blank"> <span style="font-size:21px;font-family:KaiTi;">
 </span>
 </a>
 <br />
-  <a href="/files/2020-h2h3mtll-syllabus.pdf" target="_blank"> <span style="font-size:21px;font-family:Calibri;">H2 Mother Tongue Language and Literature Syllabus Document 
+  <a href="/files/2020-h2h3mtll-syllabus.pdf" target="_blank"> <span style="font-size:21px;font-family:Calibri;"> 
 </span>
 </a>
   </p>
