--- a/pages/高中.md
+++ b/pages/高中.md
@@ -165,7 +165,7 @@ width:80%;
 </span>
 </a>
   </p>
-  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学相关链接
+  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学相关链接:
 </h4>
   <div class="clearfix">
   <div class="img-container1">
