--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -34,35 +34,27 @@ td{
 <a href="/TL-PreSch/" class="btn" style="float:left;">Previous</a>
  <a href="/tl-sec/" class="btn" style="float:right;">Next</a>
  <br />
-<img src="/images/MTLS2022_TL_Header_Curriculum_V1_Primary_Banner.jpg" />
+<img id="CV_1" src="/images/MTLS2022_TL_Header_Curriculum_V1_Primary_Banner.jpg" />
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_1.jpg"><br/>
  <h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தொடக்கப்பள்ளிப் பாடக்கலைத்திட்டம்
 </span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_2.jpg" /><br />
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">மகிழ்வூட்டும் கற்றல் 
-</span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_3.jpg">
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_4.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
-</span></h4>
-<li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;"><a href="#C1">நெகிழ்வுத்தன்மைமிக்க பாடத்திட்டம் </a></li>
+<h4><a href="#CV_1" style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
+</a></h4>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">சூழமைவுசார்ந்த பாடப்பொருள்</li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">புதிய பாடப்பொருளும் ஆராய்ந்தறிதலும்</li>
-<li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;"><a href="#C2">ஆதரவளிக்கும் வகுப்பறைச் சூழல்</a></li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">தாய்மொழி ஆதரவுத் திட்டம் </li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">உயர்தமிழ் பாடத்திட்டம் </li>
 <h4 id="C1" style="font-family:Anjal New InaiMathi Sch Book;">நெகிழ்வுத்தன்மைமிக்க பாடத்திட்டம்
 </h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_5.jpg"><br/>
-<h4 id="C2" style="font-family:Anjal New InaiMathi Sch Book;">ஆதரவளிக்கும் வகுப்பறைச் சூழல்
-</h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_6.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">விளையாட்டுவழிக் கற்றல் 
-</span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_7.jpg">
 <br/>
 <h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">ஈடுபாடுமிகுந்த கற்றலுக்கு ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்
