--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -88,7 +88,7 @@ width:90%;
  </h2> 
    <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; padding:8px; font-size: 24px;">சிங்கப்பூரில் தாய்மொழிக் கல்வி காலத்திற்கேற்பப் பல மாற்றங்களைக் கண்டு வந்துள்ளது. 2005, 2010 ஆகிய ஆண்டுகளில் தாய்மொழிக் கல்வி குறித்த முக்கிய மறு ஆய்வுகள் மேற்கொள்ளப்பட்டன. இந்த மறு ஆய்வுகளில் தாய்மொழிக் கல்வி குறித்த முக்கியப் பரிந்துரைகள் முன்வைக்கப்பட்டன. கல்வி அமைச்சு அவற்றை ஏற்று முழுமையாகச் செயற்படுத்தி வருகின்றது.<br />
    <br />
-    இதன் அடிப்படையில் தமிழ்மொழி கற்றல் கற்பித்தலை அடுத்தடுத்த மேம்பட்ட  நிலைக்குக் கொண்டு செல்ல அரசாங்கத்தின் உதவியோடு தொடர்ந்து பல முயற்சிகள் மேற்கொள்ளப்பட்டு வருகின்றன. </p><br />
+    இதன் அடிப்படையில் தமிழ்மொழி கற்றல் கற்பித்தலை அடுத்தடுத்த மேம்பட்ட  நிலைக்குக் கொண்டு செல்ல அரசாங்கத்தின் உதவியோடு தொடர்ந்து பல முயற்சிகள் மேற்கொள்ளப்பட்டு வருகின்றன. </p>
 <h2 id="C1" style="font-family:Anjal New InaiMathi Sch Book; font-size:36px; font-weight:bold; text-align:center;">உயர்நிலைப் பாடக்கலைத்திட்டங்கள்</h2>
  <h4 style="font-family:Anjal New InaiMathi Sch Book; font-size:28px; font-weight:bold; color:purple; text-align:left;">நம் தொலை இலக்கு</h4>
 <p style=" text-align:justify; padding:8px; font-family:Anjal New InaiMathi Sch Book; font-size:24px;"> தமிழை வாழும் மொழியாக நிலைபெறச் செய்வதன் வாயிலாக நம் இளம் தலைமுறையினர் பயன்மிகு வாழ்க்கை வாழ வழிகாட்டுதல்.<br />
@@ -99,10 +99,10 @@ width:90%;
   <p style=" text-align:justify; padding:8px; font-family:Anjal New InaiMathi Sch Book; font-size: 24px;"> சிங்கப்பூரில் 1834-ஆம் ஆண்டில்தான் ஒரு பள்ளியில் முதன்முறையாகத் தமிழ் வகுப்பு  அறிமுகப்படுத்தப்பட்டது. இருந்தபோதிலும், 1958-ஆம் ஆண்டில்தான் தொடக்கநிலை, உயர்நிலைப் பள்ளிகளுக்குரிய தமிழ்மொழிப் பாடத்திட்டம் உருவாக்கப்பட்டது. இது ஆங்கிலத்தில் அச்சிடப்பெற்றிருந்தது. அதன் பின்னர், நமது அரசாங்கத்தால் செயற்படுத்தப்பெற்ற பல புதிய கல்விக்கொள்கைகளுக்கு ஏற்பப் பாடத்திட்டங்கள் திருத்தியமைக்கப்பெற்றன. <br />
    <br />
    பின்வரும் ஒளிக்காட்சியில் பாடத்திட்டத்தின் வளர்ச்சிநிலையைக் காணலாம்.  </p>
-    <p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px"> உயர்நிலைத் தமிழ்மொழிப் பாடத்திட்டம் (1958முதல் 2011வரை)
-</p>
+    <h4 style="font-family:Anjal New InaiMathi Sch Book; font-size:24px"> உயர்நிலைத் தமிழ்மொழிப் பாடத்திட்டம் (1958முதல் 2011வரை)
+</h4>
   <center>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/6sBb03SK3wI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> </center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/15TaqCqQ4To" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> </center>
 <h2 id="C3" style="font-family:Anjal New InaiMathi Sch Book; font-size:36px; font-weight:bold; text-align:center;">தமிழ்மொழிப் பாடத்திட்டம் 2021</h2>
 <img src="/images/tl-sec_poster01.jpg" /><br />
  <a href="/files/2021-tamil-curriculum.pdf" target="_blank" style="background-color: purple; font-size: 18px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 24px; display: inline-block; miso-padding-alt: 0;">தமிழ்மொழிப் பாடத்திட்டம் 2021 (உயர்நிலை)</a><br />
