--- a/pages/中学.md
+++ b/pages/中学.md
@@ -71,7 +71,8 @@ width:100%;
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_5.jpg"><br/>
       <p style="font-size:25px;font-family:KaiTi"><span class="dot">
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_6.jpg"><br/>
-     <p style="font-size:25px;font-family:KaiTi">华文文学课程</p>
+     <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程</p>
+</h4>
      <img src="/images/MTLS2022_CL_Curriculum_V2_SecSch_7.jpg"><br/>
 <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165;">中学华文语文特选课程</h4>
 <p style="font-size:25px;font-family:KaiTi;text-align:justify;">中学华文语文特选课程（简称中学语特）设立的目的是要栽培精通双语的人才，提高学生的华文水平和文学素养。本课程为期2年，所有中学语特学生必须修读华文文学相关课程。学生除了可以参加2-3天语特营，文学讲座、作家座谈会等、也能到中国大陆、台湾等地进行2周海外浸儒活动。从2020年开始，教育部在9所中学开办中学华文语文特选课程。</p>
