--- a/pages/中学.md
+++ b/pages/中学.md
@@ -71,7 +71,7 @@ width:100%;
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_5.jpg"><br/>
       <p style="font-size:25px;font-family:KaiTi"><span class="dot">
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_6.jpg"><br/>
-     <p style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程</p>
+     <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程
 </h4>
      <img src="/images/MTLS2022_CL_Curriculum_V2_SecSch_7.jpg"><br/>
 <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165;">中学华文语文特选课程</h4>
