--- a/pages/小学.md
+++ b/pages/小学.md
@@ -191,7 +191,8 @@ width:100%;
   <tr>
      <td style="text-align: left;font-family:KaiTi;">
       <li style="text-align: left;font-family:KaiTi;font-size:25px;">有效地使用资讯科技，激发学生学习华文的兴趣，提供个别化的学习方式。</li>
-      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    利用网络平台，促进协作式和探究式的学习，提高学习效益。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    利用网络平台，促进协作式和探究式的学习，提高学习效益。<br/>
+<img src="/images/CL-Pri-v2-2.png">												</li>
     </td>
   </tr>
    <tr>
