--- a/pages/小学.md
+++ b/pages/小学.md
@@ -236,7 +236,7 @@ width:100%;
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">录像放映室 - 谁有礼貌 
 </span>
      </center>
-<li style="text-align:center;font-family:KaiTi;font-size:35px;">  知识百宝袋</li>
+<li style="text-align:left;font-family:KaiTi;font-size:25px;">  知识百宝袋</li>
 <p style="font-family:KaiTi;font-size:25px"> 帮助学生理解并拓展口语词汇。</p>
 <div class="clearfix">
   <div class="img-container">
@@ -254,7 +254,7 @@ width:100%;
   <img src="/images/Picture-Pri-11.png" style="width:100%">
   </div>
 </div>
-<li style="text-align:center;font-family:KaiTi;font-size:35px;"> 听说智多星</h4>
+<li style="text-align:left;font-family:KaiTi;font-size:25px;"> 听说智多星</li>
 <p style="font-family:KaiTi;font-size:25px">通过生动的互动游戏，让学生在真实的语境中进行听说活动，巩固所学。</li>
 <div class="clearfix">
   <div class="img-container">
@@ -271,13 +271,13 @@ width:100%;
 </center>
 </div></div>
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">   拼音城堡</h4>
-<li style="font-family:KaiTi;font-size:25px">学一学</li>
+<li style="font-family:KaiTi;font-size:25px;text-align:left;">学一学</li>
 <p style="font-family:KaiTi;font-size:25px">通过不同形式的游戏，巩固当课的学习内容。</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/yNxun_MxnlQ" title="拼音城堡 学一学1A5" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">拼音城堡：学一学
 </span></center>
-<li style="font-family:KaiTi;font-size:25px">复习加油站</li>
+<li style="font-family:KaiTi;font-size:25px;text-align:left;">复习加油站</li>
 <p style="font-family:KaiTi;font-size:25px">通过有趣的游戏，复习所学的汉语拼音。</p>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/k-EfBjvxi-0" title="拼音城堡 复习加油站 闯关" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
