--- a/pages/小学.md
+++ b/pages/小学.md
@@ -255,7 +255,7 @@ width:100%;
   </div>
 </div>
 <li style="text-align:left;font-family:KaiTi;font-size:25px;"> 听说智多星</li>
-<p style="font-family:KaiTi;font-size:25px">通过生动的互动游戏，让学生在真实的语境中进行听说活动，巩固所学。</li>
+<p style="font-family:KaiTi;font-size:25px">通过生动的互动游戏，让学生在真实的语境中进行听说活动，巩固所学。</p>
 <div class="clearfix">
   <div class="img-container">
   <img src="/images/Picture-Pri-12.png" style="width:100%">
