--- a/pages/中学.md
+++ b/pages/中学.md
@@ -65,8 +65,11 @@ width:100%;
      <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/sjAY_gDz9gE" title="中学2021课程 - 文化要素 ( 新年）" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">中学2021课程 - 文化要素 ( 新年)</span>
      <br/>
+     <p style="font-size:25px;font-family:KaiTi"><span class="dot">
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_4.jpg"><br/>
+	     <p style="font-size:25px;font-family:KaiTi"><span class="dot">
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_5.jpg"><br/>
+				      <p style="font-size:25px;font-family:KaiTi"><span class="dot">
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_6.jpg"><br/>
      <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程
 </h4>
