--- a/pages/小学.md
+++ b/pages/小学.md
@@ -74,7 +74,7 @@ width:100%;
 </p><br />
 <center>
  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/Xrt-3vmeuF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 《欢乐伙伴》主题曲</span><center>
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 《欢乐伙伴》主题曲</span></center>
    <br />
  <div class="row">
  <div class="column">
