--- a/pages/小学.md
+++ b/pages/小学.md
@@ -60,7 +60,8 @@ width:100%;
   }
 }
   </style>
-<a href="/exhibits/chinese-exhibitions-b/moe-curriculum" class="btn" style="float:left;">Previous</a>
+<body>
+	<a href="/exhibits/chinese-exhibitions-b/moe-curriculum" class="btn" style="float:left;">Previous</a>
   <a href="/cl-secsch" class="btn" style="float:right;">Next</a><br />
   <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_1.jpg" />
 <p style="font-size:30px;font-family:KaiTi">
@@ -353,4 +354,5 @@ width:100%;
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_8.jpg"><br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
+	</body>
 </html>
