--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -126,29 +126,29 @@ width:90%;
   <img src="/images/TL-Sec-2.png" style="width:100%;" /><br />
   <img src="/images/TL-Sec-3.png" style="width:100%;" /><br />
   <img src="/images/Tl-Sec-4.png" style="width:100%;" /><br />
-    <img src="/images/tl-sec_books.gif" style="width:40%;" /><br />
-    <h2 id="C11" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">மொழி கற்றலுக்குத் துணைவளமாக அமையும் தற்கால நடப்புச் செய்திகள்</h2>
+  <br />
 	
 <img src="/images/TL Sec 5.png" style="width:100%;" /><br />
 	
 
-   <p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
+   <p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
 </p>
        <center>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/nnuIhutTDUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
-<h2 style="font-family:Anjal New InaiMathi Sch Book; font-size:36px; font-weight:bold; text-align:center;">தகவல் தொடர்புத் தொழில்நுட்பத்தின் கூடுதல் ஒருங்கிணைப்பு</h2>
+<h2 style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">தகவல் தொடர்புத் தொழில்நுட்பத்தின் கூடுதல் ஒருங்கிணைப்பு</h2>
 <img src="/images/tl-sec_poster07.jpg" />
  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_6.jpg" /><br />
-<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:justify;" class="lbCh">மாணவர் கற்றல் தளம்
+	  <img src="/images/tl-sec_books.gif" style="width:40%;" />
+<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:center;" class="lbCh">மாணவர் கற்றல் தளம்
 </p>
  <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/fIHrnUN7Lp0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
  <img src="/images/tl-sec_poster09.jpg" /><br />
-<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:justify;">எழுத்திலிருந்து பேச்சுமொழி வடிவமாற்றம்
+<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:center;">எழுத்திலிருந்து பேச்சுமொழி வடிவமாற்றம்
 </p>
   <center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/grfbtAhjzxw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
-<h2 id="C6" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">தமிழ் இலக்கியம்</h2>
+<h2 id="C6" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">தமிழ் இலக்கியம்	(Tamil Language Elective Programme (TLEP)</h2>
  <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; font-size:24px;">
  <span style="font-family:Anjal New InaiMathi Sch Book; font-weight:bold; color:purple;">உயர்நிலை 3-இல்</span> பயிலும் மாணவர்களுக்குத் தமிழ் இலக்கியம் தனிப் பாடமாக வழங்கப்படுகிறது. <br />
  இப்பாடத்தைப் பயில விரும்பும் மாணவர்கள் உயர்நிலை 2 இறுதியில் <strong>தமிழ்மொழியில்</strong> A2 அல்லது <strong>உயர்தமிழில் </strong>B3 பெற்றிருத்தல் வேண்டும். </p>
@@ -171,10 +171,10 @@ width:90%;
    <img src="/images/tl-sec_tlep-poster2.jpg" />  
 <br /><br />
 <img src="/images/tl-sec-optional-curriculum-update.jpg" /><br />
-<li style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; font-size:24px;">ஏன், எதற்காக, என்ன </li>
-<li style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; font-size:24px;">தமிழ் இல்க்கியப் பாடக்கூறு </li>
 	   <img src="/images/Tamil 5.png" /> 
 <br /><br />
+	<center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/6vm8yxPb5ic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
 	<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
 </body>
