--- a/pages/小学.md
+++ b/pages/小学.md
@@ -3,3 +3,354 @@ title: 小学
 permalink: /cl-prischool
 description: ""
 ---
+<html>
+  <style>
+    .btntop {
+    position: fixed;
+    float: right;
+    bottom: 20px;
+    right: 80px;
+    z-index: 99;
+    boder: none;
+    background-color: #3bb9ff;
+    cursor: pointer;
+    padding: 15px;
+    boder-radius: 4px;
+    color: #fff;
+    font-weight: 600;
+}
+    .column {
+    padding:5px;
+}
+  .rowimg {
+ display:flex;
+  height:3.3% !important;
+}
+.columnimg {
+  float: left;
+  width: 80%;
+  padding: 5px;
+}
+img{
+   width: 100%;
+ }
+  * {
+  box-sizing: border-box;
+}
+ .iframe2{
+border : 0;
+width:100%;
+}
+.img-container {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+   iframe {
+    border: 0;
+}
+  @media screen and (max-width: 600px) {
+  iframe {
+    width:100%;
+  }
+}
+  </style>
+<body>
+	<a href="/exhibits/chinese-exhibitions-b/moe-curriculum" class="btn" style="float:left;">Previous</a>
+  <a href="/cl-secsch" class="btn" style="float:right;">Next</a><br />
+  <img src="/images/MTLS2022_CL_Curriculum_V2_PriSch_1.jpg" />
+<p style="font-size:30px;font-family:KaiTi">
+<a href="#C1"><span style="color:blue; font-family:KaiTi; font-size:30px;">课程介绍</span></a> &nbsp; 
+ <a href="#C2"><span style="color:blue; font-family:KaiTi; font-size:30px;">教学资源</span></a> &nbsp; 
+ <a href="#C3"><span style="color:blue; font-family:KaiTi; font-size:30px;">给家长的小贴士</span></a>
+  <br /></p>
+<p style="font-size:25px;font-family:KaiTi; text-align:justify;">
+<p style="font-family:KaiTi;font-size:25px">
+2015年开始实施的这套华文教材定名为《欢乐伙伴》，是希望它能成为孩子们的学习良伴，也希望孩子们在学习的过程中互相协助、共同进步，成为彼此快乐学习的好伙伴。
+</p><br />
+<center>
+ <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/Xrt-3vmeuF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 《欢乐伙伴》主题曲</span></center>
+   <br />
+ <div class="row">
+ <div class="column">
+ <iframe width="420" height="315" src="https://www.youtube.com/embed/QcNMzIyrQwM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi;text-align:center;"> 2015小学华文教材介绍（欢乐伙伴）</span>
+   <br />
+</div>
+  <div class="column">
+  <iframe width="420" height="315" src="https://www.youtube.com/embed/z2VjuKAw0kY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /> <span style="color:#d14165;font-size:18px;font-family:KaiTi;text-align:center"> 华文，我爱学 我会用</span>
+    <br />
+ </div>
+      </div>
+      <br/>
+      <h4 id="C1" style="font-family:KaiTi;font-size:35px;" > 课程介绍</h4>
+      <img src="/images/MTLS2022_CL_Curriculum_V2_PriSch_2.jpg"><br/>
+      <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;
+    font-weight: 700;"> 1. 重视语言技能，实现有效沟通  </td>
+  </tr>
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;font-size:25px;">
+    <li style="text-align: left;font-family:KaiTi;font-size:25px;"> 通过听、说、读、写和语言综合运用的教学，为学生打好语言基础。</li>
+    <li style="text-align: left;font-family:KaiTi;font-size:25px;">通过活动和任务，让学生掌握口语互动和书面互动的技能，与他人进行有效、有意义的交流。</li>
+    </td>
+  </tr>
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 25px;color: #fff;
+    font-weight: 700;">  2.   
+    注重实用价值，实现乐学善用 </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;">    
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;">充分利用家庭、学校、社区等不同平台，为学生营造有利于学习华文的环境。</li></td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+    font-weight: 700;">3. 遵循学习规律，符合认知发展 </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;font-size:25px;">     
+      <li style="text-align: left;font-family:KaiTi;line-height: 1px;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li></td>
+  </tr>
+</table>
+<br/>
+<img src="/images/Picture-Pri-1.png">
+<br/>
+ <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+    font-weight: 700;"> 4. 照顾个别差异，发掘学生潜能 </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;font-size:25px;">   
+        <li style="text-align: left;font-family:KaiTi;line-height: 1px;font-size:25px;">以学生为本，照顾学生差异。</li></td>
+  </tr>
+</table>
+<br/>
+<img src="/images/Picture-Pri-2.png">
+<br/>
+<center>
+<iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/FfEBnJvr-h8" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段母语辅助计划  ABLE华文我也行 课堂活动 </span></center>
+   <br />
+   <center>
+ <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/9tkyqj-BWMw" title="生活看板（华文） —— 阳光小熊早餐" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /> <span style="color:#d14165;font-size:18px;font-family:KaiTi">高年段华文
+《生活看板》实践学习</span></center>
+    <br />
+    <center>
+<iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/jQjU07ccL8I" title="中年段高级华文——小小书" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+ <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 中年段高级华文 
+学生学习成果</span></center>
+   <br />
+      <table style=" font-family:KaiTi;border-collapse: collapse;width: 100%;">
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+    font-weight: 700;"> 5. 培养情意品德，传承华族文化  </td>
+  </tr>
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;">
+    <li style="text-align: left;;font-family:KaiTi;font-size:25px;">以“21世纪技能的核心价值观”为引导，培养学生良好的情意品德和正确的价值观。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    重视华族文化的传承，让学生从小感受、认识华族语言文化的魅力和价值。</li>
+<div class="rowimg" style="margin:4%;">
+  <div class="columnimg" style="float: left; width: 25%; padding: 5px;transform: rotate(-24deg);">
+ <img src="/images/cl-prisch2.png" />
+</div><br/>
+  <div class="columnimg" style="float: left;width: 25%;padding: 5px;transform: rotate(9deg);">
+  <img src="/images/cl-prisch3.png" />
+ </div>
+ <div class="columnimg" style="float: left;width: 25%; padding: 5px;transform: rotate(-7deg);">
+  <img src="/images/cl-prisch4.png" />
+ </div>
+ <div class="columnimg" style="float: left; width: 25%;padding: 5px;transform: rotate(6deg);">
+  <img src="/images/cl-prisch5.png" />
+ </div>
+  </div>
+</td>
+  </tr>
+  <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+    font-weight: 700;">  6.   
+    促进思维发展，培养自学能力 </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;">    
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;">重视发挥语言与思维之间相互促进的作用。</li>
+     <li style="text-align: left;font-family:KaiTi;font-size:25px;"> 注重学习方法与策略的指导。</li>
+   </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;
+    font-weight: 700;font-size:25px;">7. 结合资讯科技，增进学习效益   </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;">
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">有效地使用资讯科技，激发学生学习华文的兴趣，提供个别化的学习方式。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    利用网络平台，促进协作式和探究式的学习，提高学习效益。                                   
+</li>
+ <img src="/images/CL-Pri-v2-2.png">  
+    </td>
+  </tr>
+   <tr>
+    <td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
+    font-weight: 700;">  8.   关注学习过程，落实有效评价 </td>
+  </tr>
+  <tr>
+     <td style="text-align: left;font-family:KaiTi;">
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">    以“全面性评价”为引导，结合教学和评价策略。</li>
+      <li style="text-align: left;font-family:KaiTi;font-size:25px;">       兼顾学习过程和学习成果，在教学中融入有效的评价策略。</li>
+    </td>
+  </tr>
+</table>
+<br/>
+<img src="/images/Picture-Pri-4.png"><br/>
+<h4 id="C2" style="text-align:center;font-family:KaiTi;font-size:35px;">教学资源</h4>
+<img src="/images/Picture-Pri-5.png"><br/>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">数码资源</h4>
+<p style="font-family:KaiTi;font-size:25px">针对各项学习技能制作的数码资源提供了多种有趣的活动，让孩子复习与巩固所学，培养孩子自主学习的能力。</p>
+<p style="font-family:KaiTi;font-size:25px">学生利用新加坡学生学习平台(SLS)的数码资源进行课堂学习和自主学习。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/BkRixrjsYRs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">数码资源介绍（SLS）
+</span>
+     </center>
+<br />
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">课程资源 </h4>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_3.jpg"><br/>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">听说剧场</h4>
+<li style="text-align: left;font-family:KaiTi;font-size:25px;">动画放映室／录像放映室</li>
+<p style="font-family:KaiTi;font-size:25px">通过有趣的动画或录像，提高学生的口语表达能力</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/PB0IwcNKCBA" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  
+  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">动画放映室-小雨点奇遇记 
+</span>
+     </center>
+<br />
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/7cbQc2L705Q" title="《谁有礼貌》（Be Courteous）" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">录像放映室 - 谁有礼貌 
+</span>
+     </center>
+<li style="text-align:left;font-family:KaiTi;font-size:25px;">  知识百宝袋</li>
+<p style="font-family:KaiTi;font-size:25px"> 帮助学生理解并拓展口语词汇。</p>
+<div class="clearfix">
+  <div class="img-container">
+  <img src="/images/Picture-Pri-8.png" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="/images/Picture-Pri-9.png" style="width:100%">
+  </div>
+</div>
+<div class="clearfix">
+  <div class="img-container">
+  <img src="/images/Picture-Pri-10.png" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="/images/Picture-Pri-11.png" style="width:100%">
+  </div>
+</div>
+<li style="text-align:left;font-family:KaiTi;font-size:25px;"> 听说智多星</li>
+<p style="font-family:KaiTi;font-size:25px">通过生动的互动游戏，让学生在真实的语境中进行听说活动，巩固所学。</p>
+<div class="clearfix">
+  <div class="img-container">
+  <img src="/images/Picture-Pri-12.png" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="/images/Picture-Pri-13.png" style="width:100%">
+  </div>
+</div>
+<div class="clearfix">
+  <div class="img-container">
+  <center>
+  <img src="/images/Picture-Pri-14.png" style="width:100%;margin-left: 52%;">
+</center>
+</div></div>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">   拼音城堡</h4>
+<li style="font-family:KaiTi;font-size:25px;text-align:left;">学一学</li>
+<p style="font-family:KaiTi;font-size:25px">通过不同形式的游戏，巩固当课的学习内容。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/yNxun_MxnlQ" title="拼音城堡 学一学1A5" title="动画放映室 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">拼音城堡：学一学
+</span></center>
+<li style="font-family:KaiTi;font-size:25px;text-align:left;">复习加油站</li>
+<p style="font-family:KaiTi;font-size:25px">通过有趣的游戏，复习所学的汉语拼音。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/k-EfBjvxi-0" title="拼音城堡 复习加油站 闯关" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 拼音城堡：复习加油站
+</span></center>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">    唱游世界</h4>
+<p style="font-family:KaiTi;font-size:25px">活泼轻快的韵文与歌曲，配上生动有趣的动画，让学生在说说唱唱的过程中巩固所学，增添学习的乐趣。
+</p><center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/nEmaOen9WsI" title="唱游世界 2B19" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi"> 唱游世界：水
+</span></center>
+<br/>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">   读写乐园</h4>
+<li style="font-family:KaiTi;font-size:25px">    生字魔法屋</li>
+<p style="font-family:KaiTi;font-size:25px">学生通过多种有趣的文字游戏，如拼图猜字、部件猜字等，加强对汉字的感知，强化识字能力。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/iHDDQbzXvg8" title="生字魔法屋" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">生字魔法屋 
+</span></center>
+<li style="font-family:KaiTi;font-size:25px">  生词游乐场</li>
+<p style="font-family:KaiTi;font-size:25px">学生可通过词语搭配、完成句子等形式巩固所学，加强对词语的感知，掌握词语。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/SHZCqfxA40M" title="生词游乐场" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">生词游乐场
+</span></center>
+<li style="font-family:KaiTi;font-size:25px">  快乐探险营</li>
+<p style="font-family:KaiTi;font-size:25px">学生可通过词语搭配、完成句子、写作小练笔等形式，加强对词语和句子的感知，巩固所学，强化写作能力。</p><center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/I6_K1u1twa4" title="快乐探险营 Part 1_句子练习" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">快乐探险营-句子练习
+</span></center><br/>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/Rv4Z69l6bt4" title="快乐探险营 Part 2_写作小练笔" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">快乐探险营-写作小练笔
+</span></center>
+<br/>
+<li style="font-family:KaiTi;font-size:25px"> 复习总动员</li>
+<p style="font-family:KaiTi;font-size:25px">学生可通过有趣的游戏，复习所学的内容，包括拼音、偏旁部首、笔画等。</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/S6BK30Ihv7Y" title="复习总动员" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">复习总动员
+</span></center>
+<h4 style="text-align:center;font-family:KaiTi;font-size:35px;">  补充资源</h4>
+<li style="font-family:KaiTi;font-size:25px"> 一、二年级语文游戏</li>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/hTRI4mXaEp0" title="P1P2语文游戏" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">一、二年级语文游戏 </span></center>
+     <br/>
+<div class="clearfix">
+  <div class="img-container">
+  <img src="/images/CL-Pri-v2-3.png" style="width:100%">
+  </div>
+  <div class="img-container">
+  <img src="/images/CL-Pri-v2-4.png" style="width:100%">
+  </div>
+</div>
+</p>
+<li style="font-family:KaiTi;font-size:25px">三、四年级游戏集（ABLE)</li>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/vLJzX0cyBqU" title="P3P4游戏集" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">三、四年级游戏集（ABLE）</span>
+ </center>
+<li style="font-family:KaiTi;font-size:25px">趣味录像、口语/写作练习</li>
+<p style="font-family:KaiTi;font-size:25px">一天一点系列</p>
+<center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/VNGppNYxN88" title="一天一点 之不见？走失？(Get Lost)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
+     <span style="color:#d14165;font-size:18px;font-family:KaiTi">一天一点之不见？走失？（Get lost）</span>
+ </center>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_4.jpg" id="C3"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_5.jpg"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_6.jpg"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_7.jpg"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_8.jpg"><br/>
+<p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+<div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
