--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -34,7 +34,7 @@ td{
 <a href="/TL-PreSch/" class="btn" style="float:left;">Previous</a>
  <a href="/tl-sec/" class="btn" style="float:right;">Next</a>
  <br />
-<img id="CV_1" src="/images/MTLS2022_TL_Header_Curriculum_V1_Primary_Banner.jpg" />
+<img src="/images/MTLS2022_TL_Header_Curriculum_V1_Primary_Banner.jpg" />
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_1.jpg"><br/>
  <h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">தொடக்கப்பள்ளிப் பாடக்கலைத்திட்டம்
