--- a/pages/小学.md
+++ b/pages/小学.md
@@ -347,7 +347,7 @@ width:100%;
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/VNGppNYxN88" title="一天一点 之不见？走失？(Get Lost)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">一天一点之不见？走失？（Get lost）</span>
  </center>
-<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_4.jpg" id="C3"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_4.jpg"><br/>
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_5.jpg"><br/>
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_6.jpg"><br/>
 <img src="/images/MTLS2022_CL_Curriculum_V1_PriSch_7.jpg"><br/>
