Update file: தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md

--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -44,8 +44,8 @@ td{
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_4.jpg">
 <br/>
-<h4><a href="#CV_1" style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
-</a></h4>
+<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">கற்றல் வளங்களும் நடவடிக்கைகளும்
+</span></h4>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">சூழமைவுசார்ந்த பாடப்பொருள்</li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">புதிய பாடப்பொருளும் ஆராய்ந்தறிதலும்</li>
 <li style="font-family:Anjal New InaiMathi Sch Book; font-size:25px;color:purple;">தாய்மொழி ஆதரவுத் திட்டம் </li>
