--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -57,7 +57,7 @@ td{
 <br/>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_7.jpg">
 <br/>
-<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">ஈடுபாடுமிகுந்த கற்றலுக்கு ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்
+<h4><span style="font-family:Anjal New InaiMathi Sch Book; font-size:30px;color:purple;">ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்
 </span></h4>
 <img src="/images/MTLS2022_TL_Curriculum_V1_PriSch_8.jpg">
 <br/>
