--- a/pages/中学.md
+++ b/pages/中学.md
@@ -70,7 +70,13 @@ width:100%;
      <img src="/images/MTLS2022_CL_Curriculum_V1_SecSch_6.jpg"><br/>
      <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文文学课程
 </h4>
-     <img src="/images/MTLS2022_CL_Curriculum_V2_SecSch_7.jpg"><br/>
+	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">- "华文文学（完整课程）Literature in Chinese（Full）是剑桥普通水准考试中一个独立的人文科目（Humanities）。华文文学（配对课程）Literature in Chinese（Elective）是综合人文科的一个配对科目。修读配对课程的学生必须同时修读以英文作为媒介语的社会科（Social Studies）。这两个科目配对组成剑桥普通水准考试中的一个完整科目——综合人文科（Combined Humanities）。</p>
+	<p style="font-size:25px;font-family:KaiTi;text-align:justify;">- 完整课程的教学内容包括现当代长篇小说、现当代短篇小说和微型小说、诗歌（古代诗词和现当代诗歌）和课外文学作品赏析，配对课程的教学内容则不包括现当代长篇小说。具体的文本，请参照下表：</p>
+	<li style="font-size:25px;font-family:KaiTi;text-align:justify;">观赏改编戏剧，分析小说文本</li>
+<iframe width="642" height="361" src="https://www.youtube.com/embed/S4BkXSUSNXU" title="每个人生命里都有一个秋云——梁海彬 谈《放逐与追逐》的戏剧改编" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<br>
+<iframe width="642" height="361" src="https://www.youtube.com/embed/27XPKO93wQg?list=PLbe_5dmyYcyevbPyiB1pWsBuoS06WiEye" title="【放逐与追逐】傅老师出事， 小愿回来看他" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V2_SecSch_7.jpg"><br/>
 <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165;">中学华文语文特选课程</h4>
 <p style="font-size:25px;font-family:KaiTi;text-align:justify;">中学华文语文特选课程（简称中学语特）设立的目的是要栽培精通双语的人才，提高学生的华文水平和文学素养。本课程为期2年，所有中学语特学生必须修读华文文学相关课程。学生除了可以参加2-3天语特营，文学讲座、作家座谈会等、也能到中国大陆、台湾等地进行2周海外浸儒活动。从2020年开始，教育部在9所中学开办中学华文语文特选课程。</p>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165;">课程活动 </h4>
